<resources>
    <string name="app_name">Transport AI</string>
    <string name="enter_email">Enter Email</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_password">Enter Password</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_booking">BookingActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="book_ride">Book a Ride</string>
    <string name="my_reviews">My Reviews</string>
    <string name="travel_points">Travel Points</string>
    <string name="your_total_points">Your Total Points:</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="card_number">Card Number</string>
    <string name="full_name">Full Name</string>
    <string name="date_entry">MM/YY</string>
    <string name="cvv">CVV</string>
    <string name="enter_review">Enter Review</string>


	<string name="twitter_consumer_key">ihKEVzAKZi7yaujUrRWFKINmH</string>
	<string name="twitter_consumer_secret">sZlGte7uOlQkNYNgi8vlvPRQrW3NX53V5XTiA8yp0ttQbAoxqN</string>

    <string name="facebook_application_id" translatable="false">574807766269886</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb574807766269886</string>

    <string name="sign_out">Sign Out</string>
    <string name="origin">Origin</string>
    <string name="payment">Payment Details</string>
    <string name="destination">Destination</string>
    <string name="distance">Distance</string>
    <string name="cost">Cost (€)</string>
    <string name="pay">Confirm Payment</string>
    <string name="car_model">Car Model</string>
    <string name="use_my_travel_points">Use my Travel Points</string>
    <string name="track_my_car">Track My Car</string>
    <string name="you_must_have_a_car_booked_to_allow_for_tracking">You must have a car booked to allow for tracking</string>
    <string name="enterPickupDestination">Please enter pickup point and destination</string>
    <string name="chooseCar">Please choose a car</string>
    <string name="pleasePay">Please Pay</string>
    <string name="paymentCompleted">Payment Completed</string>
    <string name="paymentFailed">Payment Failed</string>
    <string name="updatedTravelPoints">Updated Travel Points</string>
    <string name="thankReviewInput">Thank you for your input!</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="price_calculator">Price Calculator</string>
    <string name="car_image">Car Image</string>
    <string name="route">Route</string>
    <string name="select_car"> Select Car</string>
    <string name="make_payment">Make Payment</string>
    <string name="post_review">Post Review</string>
    <string name="please_enter_review">Enter a rating and comment to leave a review</string>
    <string name="error_posting_review">Error Posting Review</string>
    <string name="error_calculating_price">Error calculating price</string>
    <string name="my_transactions">My transactions</string>
    <string name="enter_title">Enter Title</string>
    <string name="support">Support</string>
    <string name="send">Send Support Request</string>
    <string name="enter_message">Enter Message</string>
</resources>
