<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_bookRide"
            android:checked="true"
            android:title="@string/book_ride" />
        <item
            android:id="@+id/nav_myReviews"
            android:title="@string/my_reviews" />
        <item
            android:id="@+id/nav_travelPoints"
            android:title="@string/travel_points" />
        <item
            android:id="@+id/nav_trackCar"
            android:title="@string/track_my_car" />
        <item
            android:id="@+id/nav_myTransactions"
            android:title="@string/my_transactions" />
    </group>
</menu>