<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/etSupportTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_title"
        android:inputType="textCapSentences|textAutoCorrect"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etSupportBody"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:hint="@string/enter_message"
        android:inputType="textCapSentences|textAutoCorrect"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:gravity="top"
        app:layout_constraintBottom_toTopOf="@id/bSendSupportRequest"
        app:layout_constraintTop_toBottomOf="@id/etSupportTitle" />

    <Button
        android:id="@+id/bSendSupportRequest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send"
        android:textColor="#FFFFFF"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="parent" />

</android.support.constraint.ConstraintLayout>