<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <Button
        android:id="@+id/bPay"
        android:layout_width="283dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button_bg_rounded_corners"
        android:text="@string/pay"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#ffffff"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="518dp"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/payment"
        android:textColor="#ffffff"
        android:textSize="40dp"
        android:gravity="center_horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteX="57dp" />

    <TextView
        android:id="@+id/tvCostData"
        android:layout_width="136dp"
        android:layout_height="0dp"
        android:drawableLeft="@drawable/euro"
        android:gravity="left|center_vertical"
        android:textColor="#ffffff"
        android:textSize="36sp"
        android:layout_margin="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView2" />

    <TableLayout
        android:layout_width="420dp"
        android:layout_height="0dp"
        android:background="#f2f2f2"
        android:layout_margin="20dp"
        app:layout_constraintTop_toBottomOf="@id/tvCostData">


        <TableRow>

            <TextView
                android:id="@+id/origin"
                android:layout_width="174dp"
                android:layout_height="match_parent"
                android:gravity="left"
                android:padding="10dp"
                android:text="@string/origin"
                android:textColor="#000000"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvOriginData"
                android:layout_width="196dp"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:textColor="#000000"
                android:textSize="24sp" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="174dp"
                android:layout_height="match_parent"
                android:gravity="left"
                android:padding="10dp"
                android:text="@string/destination"
                android:textColor="#000000"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvDestinationData"
                android:layout_width="196dp"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:textColor="#000000"
                android:textSize="24sp" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="174dp"
                android:layout_height="match_parent"
                android:gravity="left"
                android:padding="10dp"
                android:text="@string/distance"
                android:textColor="#000000"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvDistanceData"
                android:layout_width="196dp"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:textColor="#000000"
                android:textSize="24sp" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/model"
                android:layout_width="174dp"
                android:layout_height="match_parent"
                android:gravity="left"
                android:padding="10dp"
                android:text="@string/car_model"
                android:textColor="#000000"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvCarModelData"
                android:layout_width="196dp"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:textColor="#000000"
                android:textSize="24sp" />
        </TableRow>

    </TableLayout>

    <CheckBox
        android:id="@+id/cbUseTravelPoints"
        android:layout_width="197dp"
        android:layout_height="wrap_content"
        android:text="@string/use_my_travel_points"
        android:textColor="#ffffff"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="438dp"
        app:layout_constraintBottom_toTopOf="@id/bPay"/>

</android.support.constraint.ConstraintLayout>